<resources>
    <string name="app_name">Uppgift4</string>
    <string name="sb_text_no_email_client">No emailing applications found</string>
    <string name="attatchement_button_text">Select attachment</string>
    <string name="attachment_chooser_header">Choose proof for fun-ness</string>
    <string name="attachment_button_text_replace">click again to replace!</string>
    <string name="snackbar_no_attachment">No attachment picked</string>
    <string name="email_recipient_hint">your@recipient.com</string>
    <string name="header_new_email">New email</string>
    <string name="email_subject_hint">Subject</string>
    <string name="email_message_hint">Write your email message here!</string>
</resources>
