<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/email_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_new_email"
            style="@style/TextAppearance.AppCompat.Headline"/>


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/input_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/email_header"
            android:hint="@string/email_recipient_hint"
            android:ems="10"
            android:inputType="textEmailAddress" />


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/input_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/input_to"
            android:hint="@string/email_subject_hint"
            android:minEms="10"
            android:inputType="textEmailSubject|textAutoCorrect" />

        <com.example.sara.uppgift4.AttachmentButton
            android:id="@+id/email_btn_attachment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attatchement_button_text"
            android:layout_below="@id/input_title" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/input_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/email_btn_attachment"
            android:hint="@string/email_message_hint"
            android:inputType="textMultiLine|textAutoCorrect"
            />



    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right|end"
        android:layout_margin="16dp"
        android:onClick="sendEmail"
        android:src="@android:drawable/sym_action_email" />

</android.support.design.widget.CoordinatorLayout>